symbol_table_lab/y.output
Terminals unused in grammar

   RESERVED


State 181 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: externs

    2 externs: %empty
    3        | externs extern

    4 extern: dcl ';'
    5       | func

    6 dcls: %empty
    7     | dcls dcl ';'

    8 dcl: type dclr
    9    | dcl ',' dclr

   10 dclr: ID
   11     | ID '[' ']'
   12     | ID '[' CON ']'

   13 type: CHAR
   14     | FLOAT
   15     | DOUBLE
   16     | INT

   17 func: fhead stmts '}'

   18 fhead: fname fargs '{' dcls

   19 fname: type ID
   20      | ID

   21 fargs: '(' ')'
   22      | '(' args ')'

   23 args: type dclr
   24     | args ',' type dclr

   25 bhead: '{'

   26 block: bhead dcls stmts '}'

   27 stmts: %empty
   28      | stmts lblstmt

   29 lblstmt: b stmt
   30        | b labels stmt

   31 labels: ID ':'
   32       | labels ID ':'

   33 s: %empty

   34 m: %empty

   35 n: %empty

   36 b: %empty

   37 stmt: expr ';'
   38     | IF '(' cexpr ')' m lblstmt m
   39     | IF '(' cexpr ')' m lblstmt ELSE n m lblstmt m
   40     | WHILE '(' m cexpr ')' m s lblstmt n m
   41     | DO m s lblstmt WHILE '(' m cexpr ')' ';' m
   42     | FOR '(' expro ';' m cexpro ';' m expro n ')' m s lblstmt n m
   43     | CONTINUE ';'
   44     | BREAK ';'
   45     | GOTO ID ';'
   46     | RETURN ';'
   47     | RETURN expr ';'
   48     | block
   49     | ';'

   50 cexpro: %empty
   51       | cexpr

   52 cexpr: expr EQ expr
   53      | expr NE expr
   54      | expr LE expr
   55      | expr GE expr
   56      | expr LT expr
   57      | expr GT expr
   58      | cexpr AND m cexpr
   59      | cexpr OR m cexpr
   60      | NOT cexpr
   61      | expr

   62 exprs: expr
   63      | exprs ',' expr

   64 expro: %empty
   65      | expr

   66 expr: lval SET expr
   67     | lval SETOR expr
   68     | lval SETXOR expr
   69     | lval SETAND expr
   70     | lval SETLSH expr
   71     | lval SETRSH expr
   72     | lval SETADD expr
   73     | lval SETSUB expr
   74     | lval SETMUL expr
   75     | lval SETDIV expr
   76     | lval SETMOD expr
   77     | expr BITOR expr
   78     | expr BITXOR expr
   79     | expr BITAND expr
   80     | expr LSH expr
   81     | expr RSH expr
   82     | expr ADD expr
   83     | expr SUB expr
   84     | expr MUL expr
   85     | expr DIV expr
   86     | expr MOD expr
   87     | BITAND lval
   88     | SUB expr
   89     | COM expr
   90     | lval
   91     | ID '(' ')'
   92     | ID '(' exprs ')'
   93     | '(' expr ')'
   94     | CON
   95     | STR

   96 lval: ID
   97     | ID '[' expr ']'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 21 22 38 39 40 41 42 91 92 93
')' (41) 21 22 38 39 40 41 42 91 92 93
',' (44) 9 24 63
':' (58) 31 32
';' (59) 4 7 37 41 42 43 44 45 46 47 49
'[' (91) 11 12 97
']' (93) 11 12 97
'{' (123) 18 25
'}' (125) 17 26
error (256)
ID (258) 10 11 12 19 20 31 32 45 91 92 96 97
CON (259) 12 94
STR (260) 95
CHAR (261) 13
ELSE (262) 39
FLOAT (263) 14
DOUBLE (264) 15
FOR (265) 42
IF (266) 38 39
INT (267) 16
RESERVED (268)
RETURN (269) 46 47
WHILE (270) 40 41
DO (271) 41
CONTINUE (272) 43
BREAK (273) 44
GOTO (274) 45
LVAL (275)
SET (276) 66
SETOR (277) 67
SETXOR (278) 68
SETAND (279) 69
SETLSH (280) 70
SETRSH (281) 71
SETADD (282) 72
SETSUB (283) 73
SETMUL (284) 74
SETDIV (285) 75
SETMOD (286) 76
OR (287) 59
AND (288) 58
BITOR (289) 77
BITXOR (290) 78
BITAND (291) 79 87
EQ (292) 52
NE (293) 53
GT (294) 57
GE (295) 55
LT (296) 56
LE (297) 54
LSH (298) 80
RSH (299) 81
ADD (300) 82
SUB (301) 83 88
MUL (302) 84
DIV (303) 85
MOD (304) 86
UNARY (305)
NOT (306) 60
COM (307) 89


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
prog (63)
    on left: 1, on right: 0
externs (64)
    on left: 2 3, on right: 1 3
extern (65)
    on left: 4 5, on right: 3
dcls (66)
    on left: 6 7, on right: 7 18 26
dcl (67)
    on left: 8 9, on right: 4 7 9
dclr (68)
    on left: 10 11 12, on right: 8 9 23 24
type (69)
    on left: 13 14 15 16, on right: 8 19 23 24
func (70)
    on left: 17, on right: 5
fhead (71)
    on left: 18, on right: 17
fname (72)
    on left: 19 20, on right: 18
fargs (73)
    on left: 21 22, on right: 18
args (74)
    on left: 23 24, on right: 22 24
bhead (75)
    on left: 25, on right: 26
block (76)
    on left: 26, on right: 48
stmts (77)
    on left: 27 28, on right: 17 26 28
lblstmt (78)
    on left: 29 30, on right: 28 38 39 40 41 42
labels (79)
    on left: 31 32, on right: 30 32
s (80)
    on left: 33, on right: 40 41 42
m (81)
    on left: 34, on right: 38 39 40 41 42 58 59
n (82)
    on left: 35, on right: 39 40 42
b (83)
    on left: 36, on right: 29 30
stmt (84)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49, on right: 29 30
cexpro (85)
    on left: 50 51, on right: 42
cexpr (86)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 38 39 40 41 51
    58 59 60
exprs (87)
    on left: 62 63, on right: 63 92
expro (88)
    on left: 64 65, on right: 42
expr (89)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95, on right: 37 47 52 53 54 55
    56 57 61 62 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 88 89 93 97
lval (90)
    on left: 96 97, on right: 66 67 68 69 70 71 72 73 74 75 76 87 90


State 0

    0 $accept: . prog $end

    $default  reduce using rule 2 (externs)

    prog     go to state 1
    externs  go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    1 prog: externs .
    3 externs: externs . extern

    ID      shift, and go to state 4
    CHAR    shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8

    $default  reduce using rule 1 (prog)

    extern  go to state 9
    dcl     go to state 10
    type    go to state 11
    func    go to state 12
    fhead   go to state 13
    fname   go to state 14


State 3

    0 $accept: prog $end .

    $default  accept


State 4

   20 fname: ID .

    $default  reduce using rule 20 (fname)


State 5

   13 type: CHAR .

    $default  reduce using rule 13 (type)


State 6

   14 type: FLOAT .

    $default  reduce using rule 14 (type)


State 7

   15 type: DOUBLE .

    $default  reduce using rule 15 (type)


State 8

   16 type: INT .

    $default  reduce using rule 16 (type)


State 9

    3 externs: externs extern .

    $default  reduce using rule 3 (externs)


State 10

    4 extern: dcl . ';'
    9 dcl: dcl . ',' dclr

    ';'  shift, and go to state 15
    ','  shift, and go to state 16


State 11

    8 dcl: type . dclr
   19 fname: type . ID

    ID  shift, and go to state 17

    dclr  go to state 18


State 12

    5 extern: func .

    $default  reduce using rule 5 (extern)


State 13

   17 func: fhead . stmts '}'

    $default  reduce using rule 27 (stmts)

    stmts  go to state 19


State 14

   18 fhead: fname . fargs '{' dcls

    '('  shift, and go to state 20

    fargs  go to state 21


State 15

    4 extern: dcl ';' .

    $default  reduce using rule 4 (extern)


State 16

    9 dcl: dcl ',' . dclr

    ID  shift, and go to state 22

    dclr  go to state 23


State 17

   10 dclr: ID .
   11     | ID . '[' ']'
   12     | ID . '[' CON ']'
   19 fname: type ID .

    '['  shift, and go to state 24

    '('       reduce using rule 19 (fname)
    $default  reduce using rule 10 (dclr)


State 18

    8 dcl: type dclr .

    $default  reduce using rule 8 (dcl)


State 19

   17 func: fhead stmts . '}'
   28 stmts: stmts . lblstmt

    '}'  shift, and go to state 25

    $default  reduce using rule 36 (b)

    lblstmt  go to state 26
    b        go to state 27


State 20

   21 fargs: '(' . ')'
   22      | '(' . args ')'

    CHAR    shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8
    ')'     shift, and go to state 28

    type  go to state 29
    args  go to state 30


State 21

   18 fhead: fname fargs . '{' dcls

    '{'  shift, and go to state 31


State 22

   10 dclr: ID .
   11     | ID . '[' ']'
   12     | ID . '[' CON ']'

    '['  shift, and go to state 24

    $default  reduce using rule 10 (dclr)


State 23

    9 dcl: dcl ',' dclr .

    $default  reduce using rule 9 (dcl)


State 24

   11 dclr: ID '[' . ']'
   12     | ID '[' . CON ']'

    CON  shift, and go to state 32
    ']'  shift, and go to state 33


State 25

   17 func: fhead stmts '}' .

    $default  reduce using rule 17 (func)


State 26

   28 stmts: stmts lblstmt .

    $default  reduce using rule 28 (stmts)


State 27

   29 lblstmt: b . stmt
   30        | b . labels stmt

    ID        shift, and go to state 34
    CON       shift, and go to state 35
    STR       shift, and go to state 36
    FOR       shift, and go to state 37
    IF        shift, and go to state 38
    RETURN    shift, and go to state 39
    WHILE     shift, and go to state 40
    DO        shift, and go to state 41
    CONTINUE  shift, and go to state 42
    BREAK     shift, and go to state 43
    GOTO      shift, and go to state 44
    BITAND    shift, and go to state 45
    SUB       shift, and go to state 46
    COM       shift, and go to state 47
    ';'       shift, and go to state 48
    '{'       shift, and go to state 49
    '('       shift, and go to state 50

    bhead   go to state 51
    block   go to state 52
    labels  go to state 53
    stmt    go to state 54
    expr    go to state 55
    lval    go to state 56


State 28

   21 fargs: '(' ')' .

    $default  reduce using rule 21 (fargs)


State 29

   23 args: type . dclr

    ID  shift, and go to state 22

    dclr  go to state 57


State 30

   22 fargs: '(' args . ')'
   24 args: args . ',' type dclr

    ','  shift, and go to state 58
    ')'  shift, and go to state 59


State 31

   18 fhead: fname fargs '{' . dcls

    $default  reduce using rule 6 (dcls)

    dcls  go to state 60


State 32

   12 dclr: ID '[' CON . ']'

    ']'  shift, and go to state 61


State 33

   11 dclr: ID '[' ']' .

    $default  reduce using rule 11 (dclr)


State 34

   31 labels: ID . ':'
   91 expr: ID . '(' ')'
   92     | ID . '(' exprs ')'
   96 lval: ID .
   97     | ID . '[' expr ']'

    '['  shift, and go to state 62
    '('  shift, and go to state 63
    ':'  shift, and go to state 64

    $default  reduce using rule 96 (lval)


State 35

   94 expr: CON .

    $default  reduce using rule 94 (expr)


State 36

   95 expr: STR .

    $default  reduce using rule 95 (expr)


State 37

   42 stmt: FOR . '(' expro ';' m cexpro ';' m expro n ')' m s lblstmt n m

    '('  shift, and go to state 65


State 38

   38 stmt: IF . '(' cexpr ')' m lblstmt m
   39     | IF . '(' cexpr ')' m lblstmt ELSE n m lblstmt m

    '('  shift, and go to state 66


State 39

   46 stmt: RETURN . ';'
   47     | RETURN . expr ';'

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    ';'     shift, and go to state 68
    '('     shift, and go to state 50

    expr  go to state 69
    lval  go to state 56


State 40

   40 stmt: WHILE . '(' m cexpr ')' m s lblstmt n m

    '('  shift, and go to state 70


State 41

   41 stmt: DO . m s lblstmt WHILE '(' m cexpr ')' ';' m

    $default  reduce using rule 34 (m)

    m  go to state 71


State 42

   43 stmt: CONTINUE . ';'

    ';'  shift, and go to state 72


State 43

   44 stmt: BREAK . ';'

    ';'  shift, and go to state 73


State 44

   45 stmt: GOTO . ID ';'

    ID  shift, and go to state 74


State 45

   87 expr: BITAND . lval

    ID  shift, and go to state 75

    lval  go to state 76


State 46

   88 expr: SUB . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 77
    lval  go to state 56


State 47

   89 expr: COM . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 78
    lval  go to state 56


State 48

   49 stmt: ';' .

    $default  reduce using rule 49 (stmt)


State 49

   25 bhead: '{' .

    $default  reduce using rule 25 (bhead)


State 50

   93 expr: '(' . expr ')'

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 79
    lval  go to state 56


State 51

   26 block: bhead . dcls stmts '}'

    $default  reduce using rule 6 (dcls)

    dcls  go to state 80


State 52

   48 stmt: block .

    $default  reduce using rule 48 (stmt)


State 53

   30 lblstmt: b labels . stmt
   32 labels: labels . ID ':'

    ID        shift, and go to state 81
    CON       shift, and go to state 35
    STR       shift, and go to state 36
    FOR       shift, and go to state 37
    IF        shift, and go to state 38
    RETURN    shift, and go to state 39
    WHILE     shift, and go to state 40
    DO        shift, and go to state 41
    CONTINUE  shift, and go to state 42
    BREAK     shift, and go to state 43
    GOTO      shift, and go to state 44
    BITAND    shift, and go to state 45
    SUB       shift, and go to state 46
    COM       shift, and go to state 47
    ';'       shift, and go to state 48
    '{'       shift, and go to state 49
    '('       shift, and go to state 50

    bhead  go to state 51
    block  go to state 52
    stmt   go to state 82
    expr   go to state 55
    lval   go to state 56


State 54

   29 lblstmt: b stmt .

    $default  reduce using rule 29 (lblstmt)


State 55

   37 stmt: expr . ';'
   77 expr: expr . BITOR expr
   78     | expr . BITXOR expr
   79     | expr . BITAND expr
   80     | expr . LSH expr
   81     | expr . RSH expr
   82     | expr . ADD expr
   83     | expr . SUB expr
   84     | expr . MUL expr
   85     | expr . DIV expr
   86     | expr . MOD expr

    BITOR   shift, and go to state 83
    BITXOR  shift, and go to state 84
    BITAND  shift, and go to state 85
    LSH     shift, and go to state 86
    RSH     shift, and go to state 87
    ADD     shift, and go to state 88
    SUB     shift, and go to state 89
    MUL     shift, and go to state 90
    DIV     shift, and go to state 91
    MOD     shift, and go to state 92
    ';'     shift, and go to state 93


State 56

   66 expr: lval . SET expr
   67     | lval . SETOR expr
   68     | lval . SETXOR expr
   69     | lval . SETAND expr
   70     | lval . SETLSH expr
   71     | lval . SETRSH expr
   72     | lval . SETADD expr
   73     | lval . SETSUB expr
   74     | lval . SETMUL expr
   75     | lval . SETDIV expr
   76     | lval . SETMOD expr
   90     | lval .

    SET     shift, and go to state 94
    SETOR   shift, and go to state 95
    SETXOR  shift, and go to state 96
    SETAND  shift, and go to state 97
    SETLSH  shift, and go to state 98
    SETRSH  shift, and go to state 99
    SETADD  shift, and go to state 100
    SETSUB  shift, and go to state 101
    SETMUL  shift, and go to state 102
    SETDIV  shift, and go to state 103
    SETMOD  shift, and go to state 104

    $default  reduce using rule 90 (expr)


State 57

   23 args: type dclr .

    $default  reduce using rule 23 (args)


State 58

   24 args: args ',' . type dclr

    CHAR    shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8

    type  go to state 105


State 59

   22 fargs: '(' args ')' .

    $default  reduce using rule 22 (fargs)


State 60

    7 dcls: dcls . dcl ';'
   18 fhead: fname fargs '{' dcls .

    CHAR    shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8

    $default  reduce using rule 18 (fhead)

    dcl   go to state 106
    type  go to state 107


State 61

   12 dclr: ID '[' CON ']' .

    $default  reduce using rule 12 (dclr)


State 62

   97 lval: ID '[' . expr ']'

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 108
    lval  go to state 56


State 63

   91 expr: ID '(' . ')'
   92     | ID '(' . exprs ')'

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50
    ')'     shift, and go to state 109

    exprs  go to state 110
    expr   go to state 111
    lval   go to state 56


State 64

   31 labels: ID ':' .

    $default  reduce using rule 31 (labels)


State 65

   42 stmt: FOR '(' . expro ';' m cexpro ';' m expro n ')' m s lblstmt n m

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    $default  reduce using rule 64 (expro)

    expro  go to state 112
    expr   go to state 113
    lval   go to state 56


State 66

   38 stmt: IF '(' . cexpr ')' m lblstmt m
   39     | IF '(' . cexpr ')' m lblstmt ELSE n m lblstmt m

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    NOT     shift, and go to state 114
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    cexpr  go to state 115
    expr   go to state 116
    lval   go to state 56


State 67

   91 expr: ID . '(' ')'
   92     | ID . '(' exprs ')'
   96 lval: ID .
   97     | ID . '[' expr ']'

    '['  shift, and go to state 62
    '('  shift, and go to state 63

    $default  reduce using rule 96 (lval)


State 68

   46 stmt: RETURN ';' .

    $default  reduce using rule 46 (stmt)


State 69

   47 stmt: RETURN expr . ';'
   77 expr: expr . BITOR expr
   78     | expr . BITXOR expr
   79     | expr . BITAND expr
   80     | expr . LSH expr
   81     | expr . RSH expr
   82     | expr . ADD expr
   83     | expr . SUB expr
   84     | expr . MUL expr
   85     | expr . DIV expr
   86     | expr . MOD expr

    BITOR   shift, and go to state 83
    BITXOR  shift, and go to state 84
    BITAND  shift, and go to state 85
    LSH     shift, and go to state 86
    RSH     shift, and go to state 87
    ADD     shift, and go to state 88
    SUB     shift, and go to state 89
    MUL     shift, and go to state 90
    DIV     shift, and go to state 91
    MOD     shift, and go to state 92
    ';'     shift, and go to state 117


State 70

   40 stmt: WHILE '(' . m cexpr ')' m s lblstmt n m

    $default  reduce using rule 34 (m)

    m  go to state 118


State 71

   41 stmt: DO m . s lblstmt WHILE '(' m cexpr ')' ';' m

    $default  reduce using rule 33 (s)

    s  go to state 119


State 72

   43 stmt: CONTINUE ';' .

    $default  reduce using rule 43 (stmt)


State 73

   44 stmt: BREAK ';' .

    $default  reduce using rule 44 (stmt)


State 74

   45 stmt: GOTO ID . ';'

    ';'  shift, and go to state 120


State 75

   96 lval: ID .
   97     | ID . '[' expr ']'

    '['  shift, and go to state 62

    $default  reduce using rule 96 (lval)


State 76

   87 expr: BITAND lval .

    $default  reduce using rule 87 (expr)


State 77

   77 expr: expr . BITOR expr
   78     | expr . BITXOR expr
   79     | expr . BITAND expr
   80     | expr . LSH expr
   81     | expr . RSH expr
   82     | expr . ADD expr
   83     | expr . SUB expr
   84     | expr . MUL expr
   85     | expr . DIV expr
   86     | expr . MOD expr
   88     | SUB expr .

    $default  reduce using rule 88 (expr)


State 78

   77 expr: expr . BITOR expr
   78     | expr . BITXOR expr
   79     | expr . BITAND expr
   80     | expr . LSH expr
   81     | expr . RSH expr
   82     | expr . ADD expr
   83     | expr . SUB expr
   84     | expr . MUL expr
   85     | expr . DIV expr
   86     | expr . MOD expr
   89     | COM expr .

    $default  reduce using rule 89 (expr)


State 79

   77 expr: expr . BITOR expr
   78     | expr . BITXOR expr
   79     | expr . BITAND expr
   80     | expr . LSH expr
   81     | expr . RSH expr
   82     | expr . ADD expr
   83     | expr . SUB expr
   84     | expr . MUL expr
   85     | expr . DIV expr
   86     | expr . MOD expr
   93     | '(' expr . ')'

    BITOR   shift, and go to state 83
    BITXOR  shift, and go to state 84
    BITAND  shift, and go to state 85
    LSH     shift, and go to state 86
    RSH     shift, and go to state 87
    ADD     shift, and go to state 88
    SUB     shift, and go to state 89
    MUL     shift, and go to state 90
    DIV     shift, and go to state 91
    MOD     shift, and go to state 92
    ')'     shift, and go to state 121


State 80

    7 dcls: dcls . dcl ';'
   26 block: bhead dcls . stmts '}'

    CHAR    shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8

    $default  reduce using rule 27 (stmts)

    dcl    go to state 106
    type   go to state 107
    stmts  go to state 122


State 81

   32 labels: labels ID . ':'
   91 expr: ID . '(' ')'
   92     | ID . '(' exprs ')'
   96 lval: ID .
   97     | ID . '[' expr ']'

    '['  shift, and go to state 62
    '('  shift, and go to state 63
    ':'  shift, and go to state 123

    $default  reduce using rule 96 (lval)


State 82

   30 lblstmt: b labels stmt .

    $default  reduce using rule 30 (lblstmt)


State 83

   77 expr: expr BITOR . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 124
    lval  go to state 56


State 84

   78 expr: expr BITXOR . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 125
    lval  go to state 56


State 85

   79 expr: expr BITAND . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 126
    lval  go to state 56


State 86

   80 expr: expr LSH . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 127
    lval  go to state 56


State 87

   81 expr: expr RSH . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 128
    lval  go to state 56


State 88

   82 expr: expr ADD . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 129
    lval  go to state 56


State 89

   83 expr: expr SUB . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 130
    lval  go to state 56


State 90

   84 expr: expr MUL . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 131
    lval  go to state 56


State 91

   85 expr: expr DIV . expr

    ID      shift, and go to state 67
    CON     shift, and go to state 35
    STR     shift, and go to state 36
    BITAND  shift, and go to state 45
    SUB     shift, and go to state 46
    COM     shift, and go to state 47
    '('     shift, and go to state 50

    expr  go to state 132
    lval  go to state 56


State 92

   86 expr: expr MOD . expr
